fix(app): dark mode

--- a/src/pages/ProductSearch/index.scss
+++ b/src/pages/ProductSearch/index.scss
@@ -4,29 +4,6 @@
   white-space: nowrap;
 }
 
-.dark .search-text {
-  color: black;
-}
-
-.accordion-button:not(.collapsed) {
-  color: black;
-  background-color: white;
-}
-
-.dark .accordion-item {
-  background-color: black !important;
-}
-
-.dark .accordion-button {
-  color: white;
-  background-color: #495057;
-}
-
-.dark .accordion-button:not(.collapsed) {
-  color: white;
-  background-color: #495057;
-}
-
 .sort-by-container {
   padding: 1.5rem 0.5rem 1rem 0;
   display: flex;
